--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 						<p>ML Engineer&nbsp; •&nbsp; Ankara/TURKEY&nbsp;&nbsp;</p>
 						<nav>
 							<ul>
-								<li><a href="http://127.0.0.1:5000/https://medium.com/@basakdilaracevik" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
-								<li><a href="http://127.0.0.1:5000/https://www.linkedin.com/in/basak-dilara-cevik/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="http://127.0.0.1:5000/https://badicev.github.io/cv/" class="fa fa-file"><span far fa-user-circle><span class="label">Resume</span></a></li>
-								<li><a href="http://127.0.0.1:5000/https://github.com/badicev" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="http://127.0.0.1:5000/mailto:cevikbasakdilara@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-								<li><a href="http://127.0.0.1:5000/https://badiceai.onrender.com/" class="fa solid fa-robot"><span class="label">Phone</span></a></li>
+								<li><a href="https://medium.com/@basakdilaracevik" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
+								<li><a href="https://www.linkedin.com/in/basak-dilara-cevik/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://badicev.github.io/cv/" class="fa fa-file"><span far fa-user-circle><span class="label">Resume</span></a></li>
+								<li><a href="https://github.com/badicev" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="mailto:cevikbasakdilara@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://badiceai.onrender.com/" class="fa solid fa-robot"><span class="label">Phone</span></a></li>
 							</ul>
 						</nav>
 					</header>
