--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Başak Dilara Çevik</h1>
-						<p>ML Engineer&nbsp; •&nbsp; Ankara/TURKEY&nbsp;&nbsp;</p>
+						<p>Badiçe&nbsp; •&nbsp; Ankara/TURKEY&nbsp;&nbsp;</p>
 						<nav>
 							<ul>
 								<li><a href="https://medium.com/@basakdilaracevik" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
