--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<script>document.write(/\d{4}/.exec(Date())[0])</script> &copy; By <a href="http://html5up.net/">HTML5 UP</a>
+						<script>document.write(/\d{4}/.exec(Date())[0])</script> &copy; Design By <a href="http://html5up.net/">HTML5 UP</a>
 					</footer>
 
 			</div>
