--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								<li><a href="https://github.com/badicev" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:cevikbasakdilara@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 								<li><a href="https://badiceai.onrender.com/" class="fa solid fa-robot"><span class="label">Phone</span></a></li>
-								<li><a href="http://127.0.0.1:5000/https://badicev-my-portfolio-portfolio-xen48m.streamlit.app/" class="fas fa-briefcase"><span class="label">Portfolio</span></a></li>
+								<li><a href="https://badicev-my-portfolio-portfolio-xen48m.streamlit.app//" class="fas fa-briefcase"><span class="label">Portfolio</span></a></li>
 							</ul>
 						</nav>
 					</header>
